--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Restaurants controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table
+{
+  border-collapse : collapse;
+  border : solid 1px #000;
+  margin: 10px 5px;
+}
+
+td,th
+{
+  border:solid 1px #000;
+  padding:5px;
+}
